...

    <Space
        android:layout_width="match_parent"
        android:layout_height="126dp" />

    <ImageButton
        android:id="@+id/btn_primary_1"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
        android:padding="0dp" />

    <ImageButton
        android:id="@+id/btn_primary_2"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
        android:padding="0dp" />

    <ImageButton
        android:id="@+id/btn_primary_3"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
...
