...

    <include layout="@layout/view_primary_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView android:id="@+id/btn_quiz_help"
        android:layout_width="40dp" android:layout_height="40dp"
        android:layout_gravity="top|end" android:layout_margin="16dp"
        android:background="@drawable/bg_help_button"
        android:gravity="center"
        android:text="?" android:textSize="18sp" android:textStyle="bold"
        android:textColor="@color/primary"
...
